Fix work items alignment

--- a/src/components/Work/styles.scss
+++ b/src/components/Work/styles.scss
@@ -3,5 +3,6 @@
   height: 100%;
   display: flex;
   justify-content: center;
+  align-items: baseline;
   flex-wrap: wrap;
 }
